added content and fix styling

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Blue Template</title>
+    <title>WebPoint Solutions LLC</title>
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700|Arimo:400,700" rel="stylesheet">
 	<link rel="shortcut icon" href="public/images/wp-favicon.png" type="image/x-icon"/>
     <link rel="stylesheet" href="public/css/style.css">
@@ -19,7 +19,7 @@
                     <div class="brand header-brand">
                         <h1 class="m-0">
                             <a href="#">
-                                <img src="public/images/logo.png" alt="Blue logo height="150" width="150">
+                                <img src="public/images/logo.png" alt="Blue logo" height="150" width="150">
                             </a>
                         </h1>
                     </div>
@@ -37,7 +37,7 @@
 	                        <h1 class="hero-title mt-0 is-revealing">Web Development and Digital Marketing Agency</h1>
 	                        <p class="hero-paragraph is-revealing">The complete solution for all your development and digital marketing needs.</p>
 	                        <p class="hero-cta mb-0 is-revealing">
-								<a class="button button-primary button-shadow" href="#">Read More</a>
+								<a class="button button-primary button-shadow" href="#services">Learn More</a>
 							</p>
 						</div>
 						<div class="hero-illustration">
@@ -78,8 +78,8 @@
                     <div class="features-inner section-inner has-top-divider">
 						<div class="features-header text-center">
 							<div class="container-sm">
-								<h2 class="section-title mt-0">Our Services</h2>
-								<p class="section-paragraph mb-0">We strive to provide one of the best web development solutions, Including.</p>
+								<h2 id="services" class="section-title mt-0">Our Services</h2>
+								<p class="section-paragraph mb-0">Using the latest tools and technologies to create solutions that will help your business or organization give your clients a great experience.</p>
 							</div>
 						</div>
                         <div class="features-wrap">
@@ -89,7 +89,7 @@
                                         <img src="public/images/web-dev.svg" alt="Feature 01">
                                     </div>
                                     <h4 class="feature-title">WEB DEVELOPMENT</h4>
-                                    <p class="text-sm">often arouses curiosity due to its resemblance to classical latin</p>
+                                    <p class="text-sm">We create engaging web experiences using the latest technologies</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
@@ -97,8 +97,8 @@
                                     <div class="feature-icon">
                                         <img src="public/images/mobile-app.svg" alt="Feature 02">
                                     </div>
-                                    <h4 class="feature-title">APP DEVELOPMENT</h4>
-                                    <p class="text-sm">often arouses curiosity due to its resemblance to classical latin</p>
+                                    <h4 class="feature-title">PROGRESSIVE WEB APPS</h4>
+                                    <p class="text-sm">Take your website to the next level with app like functionality</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
@@ -106,8 +106,8 @@
                                     <div class="feature-icon">
                                         <img src="public/images/ui-ux.svg" alt="Feature 03">
                                     </div>
-                                    <h4 class="feature-title">UI-UX DESIGN</h4>
-                                    <p class="text-sm">often arouses curiosity due to its resemblance to classical latin</p>
+                                    <h4 class="feature-title">UX DESIGN</h4>
+                                    <p class="text-sm">Thorough research and testing to maximize your website's usability</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
@@ -116,7 +116,7 @@
                                         <img src="public/images/web-host.svg" alt="Feature 04">
                                     </div>
                                     <h4 class="feature-title">WEB HOSTING</h4>
-                                    <p class="text-sm">often arouses curiosity due to its resemblance to classical latin</p>
+                                    <p class="text-sm">Fast, reliable, and secure hosting on industry leading providers</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
@@ -125,7 +125,7 @@
                                         <img src="public/images/web-maintenance.svg" alt="Feature 04">
                                     </div>
                                     <h4 class="feature-title">WEBSITE MAINTENANCE</h4>
-                                    <p class="text-sm">often arouses curiosity due to its resemblance to classical latin</p>
+                                    <p class="text-sm">Keeping your website safe, up-to-date and running smoothly</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
@@ -134,7 +134,7 @@
                                         <img src="public/images/marketing.svg" alt="Feature 04">
                                     </div>
                                     <h4 class="feature-title">DIGITAL MARKETING/SEO</h4>
-                                    <p class="text-sm">often arouses curiosity due to its resemblance to classical latin</p>
+                                    <p class="text-sm">Reach a wider audience and maximize your ROI</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
@@ -142,8 +142,8 @@
                                     <div class="feature-icon">
                                         <img src="public/images/wordpress.svg" alt="Feature 04">
                                     </div>
-                                    <h4 class="feature-title">WORDPRESS SUPPORT</h4>
-                                    <p class="text-sm">often arouses curiosity due to its resemblance to classical latin</p>
+                                    <h4 class="feature-title">WORDPRESS MANAGEMENT</h4>
+                                    <p class="text-sm">We take the headache out of maintaining your site so you can focus on your clients</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
@@ -152,7 +152,7 @@
                                         <img src="public/images/store.svg" alt="Feature 04">
                                     </div>
                                     <h4 class="feature-title">E-COMMERCE</h4>
-                                    <p class="text-sm">often arouses curiosity due to its resemblance to classical latin</p>
+                                    <p class="text-sm">We create customized e-commerce solutions your customers will love</p>
                                 </div>
                             </div>
                         </div>
@@ -163,40 +163,45 @@
 			<section class="features-tabs section">
                 <div class="container">
                     <div class="features-tabs-inner section-inner has-top-divider">
+						<div class="features-header text-center">
+							<div class="container-sm">
+								<h2 class="section-title mt-0">Our Solutions</h2>
+							</div>
+						</div>
 						<div class="tabs-container">
 							<ul class="tabs-links">
 								<li class="is-revealing">
 									<a href="#tab-1" class="tab-link is-active">
 										<img src="public/images/tabs-icon-01.svg" alt="Tabs icon 01">
-										<span class="h4 m-0">Amazing features</span>
+										<span class="h4 m-0">Small &amp; Medium Business</span>
 									</a>
 								</li>
 								<li class="is-revealing">
 									<a href="#tab-2" class="tab-link">
 										<img src="public/images/tabs-icon-02.svg" alt="Tabs icon 02">
-										<span class="h4 m-0">Endless possibilities</span>
+										<span class="h4 m-0">Non-Profit Organizations</span>
 									</a>
 								</li>
 								<li class="is-revealing">
 									<a href="#tab-3" class="tab-link">
 										<img src="public/images/tabs-icon-03.svg" alt="Tabs icon 03">
-										<span class="h4 m-0">Ease of use</span>
+										<span class="h4 m-0">Digital Transformation</span>
 									</a>
 								</li>
 							</ul>
 							<div class="tabs-content">
 								<div id="tab-1" class="tab-panel is-active">
-									<h2>Discover</h2>
+									<h3>Improve Your Customer Engagement</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 									<p class="mb-0">A arcu cursus vitae congue. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique.</p>
 								</div>
 								<div id="tab-2" class="tab-panel">
-									<h2>Power of customisation</h2>
+									<h3>Let Your Message Stand Out</h3>
 									<p>A arcu cursus vitae congue. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique.</p>
 									<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. A arcu cursus vitae congue.</p>
 								</div>
 								<div id="tab-3" class="tab-panel">
-									<h2>Keep it simple</h2>
+									<h3>Keep it simple</h3>
 									<p>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
 									<p class="mb-0">Nemo enim ipsam voluptatem, quia voluptas sit, aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos, qui ratione voluptatem sequi nesciunt.</p>
 								</div>
@@ -493,12 +498,13 @@
                             </a>
                         </li> -->
                     </ul>
-                    <div class="footer-copyright">&copy; 2018 WebPoint, all rights reserved</div>
+                    <div class="footer-copyright">&copy; <span id="currentYear"></span> WebPoint, all rights reserved</div>
                 </div>
             </div>
         </footer>
 	</div>
 	<script src="public/js/main.min.js"></script>
 	<script src="public/js/form.js"></script>
+	<script src="public/js/main.js"></script>
 </body>
 </html>
