added compression module

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -92,15 +92,7 @@
                                     <p class="text-sm">We create engaging web experiences using the latest technologies</p>
                                 </div>
                             </div>
-                            <div class="feature is-revealing">
-                                <div class="feature-inner">
-                                    <div class="feature-icon">
-                                        <img src="public/images/mobile-app.svg" alt="Feature 02">
-                                    </div>
-                                    <h4 class="feature-title">PROGRESSIVE WEB APPS</h4>
-                                    <p class="text-sm">Take your website to the next level with app like functionality</p>
-                                </div>
-                            </div>
+
                             <div class="feature is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
@@ -117,6 +109,15 @@
                                     </div>
                                     <h4 class="feature-title">WEB HOSTING</h4>
                                     <p class="text-sm">Fast, reliable, and secure hosting on industry leading providers</p>
+                                </div>
+                            </div>
+							 <div class="feature is-revealing">
+                                <div class="feature-inner">
+                                    <div class="feature-icon">
+                                        <img src="public/images/store.svg" alt="Feature 04">
+                                    </div>
+                                    <h4 class="feature-title">E-COMMERCE</h4>
+                                    <p class="text-sm">We create customized e-commerce solutions your customers will love</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
@@ -146,13 +147,13 @@
                                     <p class="text-sm">We take the headache out of maintaining your site so you can focus on your clients</p>
                                 </div>
                             </div>
-                            <div class="feature is-revealing">
+							<div class="feature is-revealing">
                                 <div class="feature-inner">
                                     <div class="feature-icon">
-                                        <img src="public/images/store.svg" alt="Feature 04">
+                                        <img src="public/images/mobile-app.svg" alt="Feature 02">
                                     </div>
-                                    <h4 class="feature-title">E-COMMERCE</h4>
-                                    <p class="text-sm">We create customized e-commerce solutions your customers will love</p>
+                                    <h4 class="feature-title">PROGRESSIVE WEB APPS</h4>
+                                    <p class="text-sm">Take your website to the next level with app like functionality</p>
                                 </div>
                             </div>
                         </div>
@@ -430,7 +431,7 @@
                 </div>
             </section>
 
-			<section class="cta section">
+			{{!-- <section class="cta section">
 				<div class="container">
 					<div class="cta-inner section-inner is-revealing">
 						<!-- <h3 class="section-title mt-0">Still not convinced?</h3>
@@ -439,7 +440,7 @@
 						</div>
 					</div>
 				</div>
-			</section>
+			</section> --}}
         </main>
 
         <footer class="site-footer">
