--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -499,7 +499,7 @@
                             </a>
                         </li> -->
                     </ul>
-                    <div class="footer-copyright">&copy; <span id="currentYear"></span> WebPoint, all rights reserved</div>
+                    <div class="footer-copyright">&copy; <span id="currentYear"></span> WebPoint Solutions, LLC, all rights reserved</div>
                 </div>
             </div>
         </footer>
